# audio_rating

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION.cff  LICENSE  README.md  audio_rating.css  audio_rating.js  docker-compose.dev.yml  index.html  index2.html  run.bash  run_backend_dev_minimal.sh  run_dev_docker_both.bash  run_dev_nginx_both.bash  run_frontend_dev_minimal.sh  test_backend_unit.sh  test_docker.sh  test_docker_backend_integration.sh  test_docker_backend_unit.sh  test_docker_e2e.sh  test_e2e.sh
.github/: copilot-instructions.md
.github/workflows/: backend_integration_tests.yml  backend_tests.yml  backend_unit_tests.yml  backend_wheel_smoke_tests.yml  deploy_ghpages.yml  e2e_tests.yml
backend/: .env.example  MANIFEST.in  pyproject.toml  run_dev.sh  run_dev_minimal.sh  studies_config.json
backend/deployment/: audiorating_backend.service.template  gunicorn_conf.py
backend/src/audiorating_backend/: api.py  database.py  frontend_audio_check.py  logging_config.py  models.py  settings.py  studies_config.py  utils.py
backend/src/audiorating_backend/parsers/: settings_parser.py  studies_config.py
backend/src/audiorating_backend/templates/: admin_base.html  admin_dashboard.html  admin_participant_management.html
backend/tests/integration/: conftest.py  test_all_endpoints_smoke.py  test_api_basics.py
backend/tests/unit/: test_admin_dashboard.py  test_create_study_api.py  test_database_config_import.py  test_frontend_audio_check.py  test_runtime_export_config_hydration.py  test_settings.py  test_settings_parser.py  test_song_check_api.py  test_studies_config_parser.py  test_study_config.py  test_utils.py
database/: create_ar_db.sh  drop_ar_db.sh
dev_tools/ci/backend_settings/: .env.ci
dev_tools/docker/: backend.Dockerfile
dev_tools/local_minimal/: README.md
dev_tools/local_nginx/: README.md
frontend/: .eslintrc.json  audio_rating.css  audio_rating.js  get_uid.html  index.html  package-lock.json  playwright.config.js  run_dev.bash  study.html  study_coordinator.js
frontend/get_uid/: index.html
frontend/settings/: studies_config.json
frontend/src/: audio_rating.css  audio_rating.js  constants.js  i18n.js  study.html  study_coordinator.js
src/: index.html  style.css
src/prototype1/: audiorating1_v1.html  audiorating1_v2.html
src/prototype2/: audiorating2_v1.html
(+23 files in other folders)
